# 2026-performance-characteristics

./: .gitignore  README.md  pyproject.toml
analysis/: plot_densities.R  plot_power_additional.R  plot_power_principal.R  plot_power_secondary.R  tabulate_size.R
data/: additional_asymmetric.csv  principal_asymmetric.csv  secondary_symmetric.csv
data/manuscript/: additional_symmetric.csv  principal_symmetric.csv  secondary_symmetric.csv
monte_carlo/: __init__.py
monte_carlo/dists/: __init__.py  fixed_dists.py  variable_dists.py
monte_carlo/engine/: __init__.py  backend_cpu.py  backend_gpu.py  data_generation.py
monte_carlo/orchestration/: __init__.py  principal_study.py  secondary_study.py
monte_carlo/stats/: __init__.py  permutations.py  stats_cpu.py  stats_gpu.py  wrappers_cpu.py  wrappers_gpu.py
monte_carlo/utils/: __init__.py  hashing.py  io.py  math.py
outputs/tables/size/principal_study/: test_size.csv
reproduce/: 01_verify_illustration_claims.py  02_run_principal_study_symmetric_shifts.py  03_run_principal_study_asymmetric_shifts.py  04_run_additional_study_symmetric_shifts.py  05_run_additional_study_asymmetric_shifts.py  06_run_secondary_study.py
tests/: test_fixed_dists.py  test_variable_dists.py
