[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "monte_carlo"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.18.0",
    "numba>=0.65.0",
    "pandas>=3.0.3",
    "typer>=0.26.7",
    "pytest>=9.1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["monte_carlo*"]